<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            style="@style/Toolbartheme"
            app:title="@string/app_name"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spot_name"
        android:id="@+id/spotname"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timings"
        android:id="@+id/time"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/location"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spot_desc"
            android:layout_marginTop="10dp"
            android:id="@+id/spotdesc"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            />

</LinearLayout>
</ScrollView>